[project]
name = "mlau-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "demoji>=2.0.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pip>=26.1.2",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "spacy>=3.8.13",
    "streamlit>=1.58.0",
    "substack>=0.0.1",
    "substack-api>=1.3.0",
    "supabase>=2.31.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl"
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
